--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>简书</title>
-  <link rel="shortcut icon" type="image/x-icon" href="static/img/jian.png">
+  <link rel="shortcut icon" type="image/x-icon" href="static/img/jian.pngd">
   <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
 </head>
 <body>
